--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=3000
 DATABASE_URL=postgresql://neondb_owner:npg_nzxjpK3W7lwf@ep-aged-band-a18x0els-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 NEWS_API_KEY=a3cb715cefc34de4bebfdfcd7d82845f
+VITE_API_BASE=https://stock-ai-backend.onrender.com
